--- a/index.html
+++ b/index.html
@@ -7,7 +7,8 @@
   <title>Redux Initial Dispatch Example</title>
 </head>
 <body>
-  
+  <h1 id="counter"></h1>
+  <button onclick="dispatch({ type: 'INCREASE_COUNT'})">Increase Count</button>
   <script src="js/reducer.js"></script>
 </body>
 </html>
